# settingtest

./: .replit  README.md  install.sh  package-lock.json  package.json  pyproject.toml  replit.nix  setup_ubuntu.sh  tab-content.txt
attached_assets/: Analyzer.py  MikrotikDecoders.xml  MikrotikRules.xml  README.md  abuseipdb-reputation.py  requirements.txt  summary.json
client/src/: App.tsx
client/src/components/capsman/: CapsmanStatus.tsx  ClientsList.tsx
client/src/components/clients/: ArpTable.tsx
client/src/components/dashboard/: ActiveAlerts.tsx  (+13 more)
client/src/demo/: AiTrafficVisualization.tsx
client/src/hooks/: use-data-formatter.ts  use-firewall-rules.ts  use-mikrotik.ts  use-network-stats.ts  use-traffic-metrics.ts  useWebSocket.ts
client/src/lib/: formatters.ts  websocket-context.tsx  websocket.ts
client/src/pages/: alerts.tsx  clients.tsx  dashboard.tsx  devices.tsx  home.tsx  security.tsx  traffic-analysis.tsx
server/: ai-traffic-analysis-api.js  ai-traffic-test.ts  logger.ts  mikrotik-api-types.ts  route-update.ts  routes.ts  storage.ts
server/services/: arp-api.ts  capsman.ts  connection-stats.ts  device-classifier.ts  dhcp-stats.ts  discovery.ts  firewallRules.ts  index.ts  log-analyzer.ts  mikrotik.ts  scheduler.ts  traffic-collector.ts
server/services/ids/: index.ts  model_loader.ts  openai_adapter.ts  openai_analyzer.py  predict.py  test-generator.ts
server/services/siem/: abuseipdb.ts  adapters.ts  client.ts  index.ts  wazuh.ts
server/services/traffic-analyzer/: index.ts  parser.ts  visualizer.ts
shared/: schema.ts  zod.ts
(+25 files in other folders)
